--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run build:ssr",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run last-tech-app:serve-ssr",
     "serve:ssr": "node dist/last-tech-app/server/main.js",
-    "build:ssr": "ng build && ng run last-tech-app:server",
+    "build:ssr": "ng build --prod && ng run last-tech-app:server:production",
     "prerender": "ng run last-tech-app:prerender"
   },
   "private": true,
