--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "dev:ssr": "ng run last-tech-app:serve-ssr",
     "serve:ssr": "node dist/last-tech-app/server/main.js",
-    "build:ssr": "ng build --prod && ng run last-tech-app:server:production",
+    "build:ssr": "ng build && ng run last-tech-app:server",
     "prerender": "ng run last-tech-app:prerender"
   },
   "private": true,
